# kefir_ajuste_book

./: .buildinfo  .gitignore  .gitmodules  LICENSE  README.md  makefile  objects.inv  pyproject.toml  requirements.txt  searchindex.js
_sources/docs/: entrenamiento.md  fuente_de_datos.md  metricas.md  problema.md  problema_directo.md
book/: _config.yml  _toc.yml  api.rst  conf.py  referencias.bib
book/_build/.doctrees/: environment.pickle
book/_build/.doctrees/docs/: bibliografia.doctree  entrenamiento.doctree  fuente_de_datos.doctree  metricas.doctree  metricas_evaluacion.doctree  modelos.doctree  pinns.doctree  problema.doctree  problema_directo.doctree  problema_inverso.doctree
book/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
book/_build/html/_sources/docs/: fuente_de_datos.md  (+4 more)
book/_build/html/docs/: bibliografia.html  entrenamiento.html  fuente_de_datos.html  metricas.html  metricas_evaluacion.html  modelos.html  pinns.html  problema.html  problema_directo.html  problema_inverso.html
book/docs/: descubrimiento_fisica.md  entrenamiento.md  mlflow.md  modelos.md  pinns.md  problema_directo.md  problema_inverso.md
docs/: bibliografia.html  entrenamiento.html  fuente_de_datos.html  metricas.html  metricas_evaluacion.html  modelos.html  pinns.html  problema.html  problema_directo.html  problema_inverso.html
notebooks/: 0.0_preprocesamiento_datos.ipynb  ajustes_intentos_manuales.ipynb
scripts/: etl.py  experiments.py  log.py  log_polynomial.py  polynomial_training.py  training.py
src/kefir_ajuste/: log_eq.py  ode_solvers.py  trainers.py  utils.py
tests/: test_log_eq.py  test_solve_eq.py
