[project]
name = "kefir-ajuste"
version = "0.1.0"
description = "Ajuste de curvas de kéfir"
authors = [
    {name = "Federico Cirett",email = "fd.cirett@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.2.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "deepxde (>=1.15.0,<2.0.0)",
    "mlflow (>=3.10.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
