[project]
name = "kefir-ajuste-book"
version = "0.1.0"
description = ""
authors = [
    {name = "fdcir3tt",email = "fd.cirett@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "jupyter-book (==1.0.4)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "sphinx (>=7.0.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"